--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,15 @@
 @import "blocks/header";
 @import "blocks/buttons";
 @import "blocks/advantages";
+@import "blocks/consultation";
+@import "blocks/forms";
+@import "blocks/titles";
+@import "blocks/carousel";
+@import "blocks/catalog";
+@import "blocks/feed";
+@import "blocks/footer";
+
+
 * {
     font-family: "Myseo Sans Cyrl" sans-serif;
 }
